# projektModulstudium

./: .gitignore  MAP_Tests_Transformieren.testona  README.md
MAP/: .gitignore  CMakeLists.txt  Makefile  Messdaten_Beschleunigungssensor.csv  readme.md  req.txt  test_Sara.csv
MAP/db/: test.csvmeta  weekly.csv  weekly.csvmeta
MAP/include/: CSV.hpp  Column.hpp  Plot.hpp  ScatterPlot.hpp  Server.hpp  Value.hpp  Visualization.hpp
MAP/src/: CSV.cpp  CSVValue.cpp  Column.cpp  Plot.cpp  ScatterPlot.cpp  Server.cpp  Value.cpp  Visualization.cpp  main.cpp  mongoose.c
MAP/src/include/: CSV.hpp  CSVValue.hpp  Server.hpp
MAP/test/: Spaltennamenfehlen.csv  Spaltennamenzuwenig.csv  Zeilen0.csv  Zeilen1Mio.csv  Zeilen1_Spalten1.csv  utest.cpp  utest_output.txt
MAP/web_root/: index.html  styles.css
MAP/web_root/download_folder/: download.csv
MessDatenPlattform Cameo Modell HTML/: data.js
MessDatenPlattform Cameo Modell HTML/css/: files.info
MessDatenPlattform Cameo Modell HTML/images/: files.info
MessDatenPlattform Cameo Modell HTML/images/smiles/: files.info
MessDatenPlattform Cameo Modell HTML/resources/: files.info
MessDatenPlattform Cameo Modell HTML/resources/ext-4.2.1/: files.info
MessDatenPlattform Cameo Modell HTML/resources/ext-4.2.1/ext-theme-neptune/: files.info
SW_Test/Classification Trees/: MAP_Tests_Analysebericht.testona  MAP_Tests_Hochladen.testona  MAP_Tests_Transformieren.testona
SW_Test/mccabe/: mccabe_complexity.txt  run_mccabe.txt
SW_Test/utests/: map_CSV_SetMetadata.testona  map_CSV_read.testona
(+28 files in other folders)
